<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DM_UFRN</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_novo_lugar">Novo Lugar</string>
    <string name="title_activity_info_lugar">InfoLugar</string>
    <string name="lugar_nome">Nome:</string>
    <string name="lugar_novo">Novo Lugar</string>
    <string name="mapa_descricao">Mapa do lugar</string>
    <string name="busca_botao">Buscar</string>
    <string name="lugar_tipo">Tipo</string>
    <string name="comentario_novo">Novo comentário</string>
    <string name="comentarios">Comentários</string>
    <string name="avaliacao_lugar">Avaliação do lugar:</string>
    <string name="avaliacao_wifi">Avaliação do Wi-fi:</string>
    <string name="usuario_nome">Nome:</string>
    <string name="usuario_curso">Curso</string>
    <string name="usuario_seguidores">Seguidores</string>
    <string name="tarefa_data">Data:</string>
    <string name="usuario_seguindo">Seguindo</string>
    <string name="usuario_foto">Foto do usuário</string>
    <string name="app_lugares">Lugares</string>
    <string name="app_tarefas">Minhas tarefas</string>
    <string name="app_comentarios">Comentários</string>
    <string name="title_activity_comentarios">Comentarios</string>
    <string name="comentarios_logo">Logotipo Comentários</string>
    <string name="comentarios_lista_ultimos">Últimos comentários:</string>
    <string name="lugar_top">Lugares TOP</string>
    <string name="title_activity_comentario">Comentario</string>
    <string name="usuario_comentario">Comentário</string>
    <string name="title_activity_comentario_novo">ComentarioNovo</string>
    <string name="usuario_login">Fazer login</string>
    <string name="comentario_descricao">Escreva aqui o seu comentário</string>
    <string name="usuario_anonimo">Comentário anônimo</string>
    <string name="title_activity_tarefas">Tarefas</string>
    <string name="tarefas">Minhas tarefas</string>
    <string name="tarefa_nova">Nova tarefa</string>
    <string name="title_activity_tarefa">Tarefa</string>
    <string name="tarefa_hora">Horário:</string>
    <string name="tarefa_descricao">Escreva aqui sua tarefa</string>
    <string name="tarefa_local">Local:</string>
    <string name="tarefa_ok">Pronto! </string>
    <string name="title_activity_usuario_perfil">UsuarioPerfil</string>
    <string name="lugar">Lugar</string>
    <string name="lugar_sala">Sala de aula</string>
    <string name="lugar_auditorio">Auditório</string>
    <string name="lugar_cantina">Cantina</string>
    <string name="lugar_restaurante">Restaurante</string>
    <string name="lugar_secretaria">Secretaria</string>
    <string name="lugar_corredor">Corredor</string>
    <string name="lugar_parada">Parada de ônibus</string>
    <string name="lugar_sala_prof">Sala dos professores</string>
    <string name="lugar_localizacao">Localização:</string>
    <string name="lugar_ok">Pronto! </string>
    <string name="title_activity_lista_lugares">ListaLugares</string>
    <string name="comentario_anonimo">Comentar anonimante </string>
    <string name="comentario_ok">Pronto! </string>
    <string name="title_activity_login">Login</string>
    <string name="usuario_senha">Senha:</string>
    <string name="usuario_cadastrar">Cadastrar-se</string>
    <string name="title_activity_update_tarefa">UpdateTarefa</string>
    <string name="title_activity_main">ActivityMain</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="preencher_dados">Preencha seus dados:</string>
    <string name="confirma_senha">Confirmar Senha:</string>
    <string name="text_descricao">Sobre mim:</string>
    <string name="text_login">Login:</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_profile_edit">ProfileEdit</string>
    <string name="title_activity_list_comment">ListComment</string>
    <string name="comentario_listar">Veja o que estão comentando</string>
    <string name="comentario">comentou:</string>
    <string name="description">description</string>
    <string name="id">id</string>
    <string name="imagem">Imagem do Perfil</string>
    <string name="spinner_title">Select Label</string>
    <string name="lugar_adicionar">Adicionar lugar</string>
    <string name="lugar_escolher">Lugares:</string>
    <string name="title_activity_redefine_senha">RedefinirSenha</string>
    <string name="imagem_apagar">Apagar</string>
    <string name="imagem_editar">Editar</string>
    <string name="tarefa">Tarefa</string>
    <string name="traco">-</string>
    <string name="login">Login</string>
    <string name="login_opcao">Manter-me autenticado</string>
   

</resources>
