<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Cadastro" >
	<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
			    android:orientation="vertical"
			    android:layout_height="wrap_content">

        <TextView
            style="@style/titulo" 
		    android:id="@+id/text_preencher_dados"
		    android:text="@string/preencher_dados"/>
	    <TextView
	    style="@style/padrao" 
	    android:id="@+id/text_usuario"    
	    android:text="@string/usuario_nome" />
	        
	    <EditText
	        style="@style/editPadrao" 
	        android:id="@+id/edit_usuario"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:inputType="text" >
	    </EditText>

	    <TextView
	    style="@style/padrao"     
	    android:id="@+id/text_login"
	    android:text="@string/text_login" />
	        
	    <EditText
	        style="@style/editPadrao" 
	        android:id="@+id/edit_login"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:inputType="text" >
	    </EditText>

    
    

    <TextView
        style="@style/padrao" 
    	android:id="@+id/text_senha"
    	android:text="@string/usuario_senha"/>
        
    <EditText
        style="@style/editPadrao" 
        android:id="@+id/edit_senha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:inputType="textPassword" >
        
    </EditText>

    

    <TextView
        style="@style/padrao" 
    android:id="@+id/text_confirmasenha"
    android:text="@string/confirma_senha"/>
        
    <EditText
        style="@style/editPadrao" 
        android:id="@+id/edit_confirmasenha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        style="@style/padrao" 
    	android:id="@+id/text_curso"
    	android:text="@string/usuario_curso"/>
        
    <EditText
        style="@style/editPadrao" 
        android:id="@+id/edit_curso"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:inputType="text" >
    </EditText>
          
    <TextView
        style="@style/padrao" 
    android:id="@+id/text_descricao"
    android:text="@string/text_descricao"/>
        
    <EditText
        style="@style/editPadrao" 
        android:id="@+id/edit_descricao"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:maxLength="140"
        android:layout_gravity="right"
        android:inputType="textMultiLine">
        
    </EditText>

    <TextView
        style="@style/padrao"     
        android:id="@+id/text_imagem"
        android:text="@string/imagem"/>
    
    <ImageButton
        android:id="@+id/trocaImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bomb" />


    
     <Button
         style="@style/buttonPadrao" 
         android:id="@+id/button_cadastro"
         android:text="@string/tarefa_ok" />
     </LinearLayout>
     </ScrollView>
</LinearLayout>
