<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageButton
        android:id="@+id/trocaImagem"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/button_lugares"
        android:src="@drawable/bomb"
        android:contentDescription="@string/usuario_foto" />

    <Button
        android:id="@+id/button_tarefas"
		style="@style/buttonFill"
        android:layout_alignLeft="@+id/button_comentarios"
        android:layout_below="@+id/button_comentarios"
        android:gravity="center_vertical|center_horizontal|center|start"
        android:minHeight="48dp"
        
        android:text="@string/app_tarefas" />

    <Button
        android:id="@+id/button_comentarios"
        style="@style/buttonFill"
        android:layout_alignLeft="@+id/button_lugares"
        android:layout_below="@+id/button_lugares"
        android:gravity="center_vertical|center_horizontal|center|start"
        android:minHeight="48dp"
        android:text="@string/app_comentarios" />

    <Button
        android:id="@+id/button_lugares"
        style="@style/buttonFill"
        android:layout_below="@+id/trocaImagem"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/app_lugares" />

    <TextView
        android:id="@+id/textView2"
        style="@style/padrao"
        android:layout_alignBottom="@+id/trocaImagem"
        android:layout_marginBottom="20dp"
        android:layout_toRightOf="@+id/trocaImagem"
        android:text="@string/usuario_curso"
	 />

    <TextView
        style="@style/padrao"     
        android:id="@+id/textView1"
        
        android:layout_alignTop="@+id/trocaImagem"
        android:layout_marginTop="14dp"
        android:layout_toRightOf="@+id/trocaImagem"
        android:text="@string/usuario_nome"
/>
    

</RelativeLayout>