<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/textView1"
        style="@style/padrao"
        android:text="@string/login" />
       

    <EditText
        android:id="@+id/usuario_nome"
        style="@style/editPadrao"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        style="@style/padrao"
        android:layout_marginBottom="16dp"
        android:text="@string/usuario_senha"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/usuario_senha"
        style="@style/editPadrao"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/manter_autenticado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/login_opcao" />
    
    <Button
        android:id="@+id/button_fazerLogin"
        style="@style/buttonFill"
        android:text="@string/usuario_login" />    
    <Button
        android:id="@+id/button_cadastrar"
		style="@style/buttonFill"
        android:text="@string/usuario_cadastrar" />

</LinearLayout>