<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NovaTarefa" >

    <TextView
        style="@style/titulo" 
        android:id="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/tarefa_nova"
        />

     <Button
         style="@style/buttonPadrao"
         android:id="@+id/button_tarefa_nova"
         android:layout_alignParentBottom="true"
         android:layout_alignRight="@+id/tarefa_descricao"
         android:layout_marginBottom="22dp"
         android:text="@string/tarefa_ok" />

     <EditText
         style="@style/editPadrao"
         android:id="@+id/tarefa_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="date"
         android:hint="@string/tarefa_data" />
          
     <EditText
         style="@style/editPadrao"
         android:id="@+id/tarefa_hora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tarefa_data"
         android:ems="10"
         android:inputType="time"
         android:hint="@string/tarefa_hora" />
          
     <EditText
         style="@style/editPadrao"
         android:id="@+id/tarefa_local"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tarefa_hora"

         android:ems="10"
         android:hint="@string/tarefa_local" />

     <EditText
         android:id="@+id/tarefa_descricao"
         style="@style/editPadrao"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/tarefa_local"
         android:layout_below="@+id/tarefa_local"
         android:ems="10"
         android:hint="@string/tarefa_descricao"
         android:imeActionLabel="@string/tarefa_nova"
         android:inputType="text|textMultiLine" >

         <requestFocus />
     </EditText>

</RelativeLayout>
