<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/categoryId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/id"
        android:layout_alignBottom="@+id/id"
        android:layout_toRightOf="@+id/description"
        android:height="20sp"
        android:text="@string/comentario"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/button_editar"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/categoryId"
        android:layout_below="@+id/description"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imagem_editar"
        android:src="@drawable/edit" />

    <ImageView
        android:id="@+id/button_apagar"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/description"
        android:layout_alignTop="@+id/button_editar"
        android:contentDescription="@string/imagem_apagar"
        android:onClick="deletar"
        android:src="@drawable/remove" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:height="40sp"
        android:text="@string/id"
        android:textColor="#000000"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/id"
        android:layout_below="@+id/id"
        android:gravity="right"
        android:height="20sp"
        android:text="@string/description"
        android:textColor="#000000" />

</RelativeLayout>