<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NovoLugar" >
	
	<ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
			    android:orientation="vertical"
			    android:layout_height="wrap_content">
		            
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >

			    <TextView
			        
			        style="@style/titulo"     
		        android:id="@+id/textView1"
		        android:text="@string/lugar"
 />
		


			    <ImageView
			        android:id="@+id/imageView1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="0.38"
			        android:contentDescription="@string/mapa_descricao"
			        android:gravity="right"
			        android:src="@drawable/lugar" />
			</LinearLayout>
		    
		    <EditText
		        style="@style/editPadrao"
		        android:id="@+id/editText1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:hint="@string/lugar_nome"
		        android:inputType="text" />
		
		        
		<RadioGroup
		        android:id="@+id/radioGroup1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content">

		    </RadioGroup>

		<Button
		    android:id="@+id/button2"
		    style="@style/buttonPadrao"
		    android:text="@string/lugar_ok" />

	    </LinearLayout>
	 </ScrollView>
</LinearLayout>


