<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/mapa"
    tools:context=".ListaLugares" >

    <TextView
        style="@style/titulo"     
        android:id="@+id/textView1"
        android:layout_alignBottom="@+id/ImageView01"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="27dp"
        android:text="@string/app_lugares" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="32dp"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/comentarios_logo"
        android:src="@drawable/search" />

     <ListView
        android:id="@+id/list_lugares"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="36dp" >
    </ListView>

    <Button
        android:id="@+id/button_lugar_novo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="22dp"
        android:text="@string/lugar_novo" />

</RelativeLayout>